2006-03-24  Stefan Kost  <ensonic@users.sf.net>

	* gst/matroska/matroska-mux.c: (gst_matroska_mux_init):
	* gst/multipart/multipartmux.c: (gst_multipart_mux_init):
	* gst/smpte/gstsmpte.c: (gst_smpte_init):
	* gst/videomixer/videomixer.c: (gst_videomixer_init):
	use DEBUG_FUNCPTR for collectpads

2006-03-24  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/jpeg/gstjpegenc.c: (gst_jpegenc_init), (gst_jpegenc_chain):
	  Don't crash when encoding images where the number of rows isn't
	  a multiple of 2*DCTSIZE. Add some GST_DEBUG_FUNCPTR.

2006-03-23  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/speex/gstspeexdec.c: (speex_dec_change_state):
	* gst/interleave/deinterleave.c: (deinterleave_change_state):
	* gst/interleave/interleave.c: (interleave_change_state):
	* gst/wavenc/gstwavenc.c: (gst_wavenc_change_state):
	  More state change function fixes.

2006-03-23  Wim Taymans  <wim@fluendo.com>

	* ext/esd/esdsink.c: (gst_esdsink_class_init),
	(gst_esdsink_getcaps), (gst_esdsink_open), (gst_esdsink_close),
	(gst_esdsink_prepare), (gst_esdsink_unprepare),
	(gst_esdsink_delay), (gst_esdsink_reset):
	* ext/esd/esdsink.h:
	Fix esd choppy playback by configuring audiosink
	correctly. Fixes #325191

2006-03-23  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/libpng/gstpngdec.c: (gst_pngdec_change_state):
	  Make state change function thread-safe.

2006-03-23  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/wavparse/gstwavparse.c: (gst_wavparse_get_upstream_size),
	(gst_wavparse_stream_headers), (gst_wavparse_stream_data):
	  Don't try to read beyond the end of the file just because
	  the header claims a bigger size (like with truncated files).

2006-03-23  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/wavparse/gstwavparse.c: (gst_wavparse_perform_seek),
	(gst_wavparse_stream_headers), (gst_wavparse_add_src_pad),
	(gst_wavparse_stream_data), (gst_wavparse_loop):
	* gst/wavparse/gstwavparse.h: